CREATE SCHEMA cinema;
SET search_path TO cinema;

CREATE TABLE client (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    email VARCHAR(255) NOT NULL,
    phone VARCHAR(20) NOT NULL
);

CREATE TABLE "order" (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    total_price NUMERIC NOT NULL,
    client_id BIGINT NOT NULL,
    created_at TIMESTAMP(0) NOT NULL,
    FOREIGN KEY (client_id) REFERENCES client (id)
);

CREATE TABLE hall_type (
    id SMALLINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    type_name VARCHAR(50) NOT NULL,
    price_modifier NUMERIC NOT NULL
);

CREATE TABLE hall (
    id INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(255) NOT NULL,
    hall_type_id SMALLINT NOT NULL,
    FOREIGN KEY (hall_type_id) REFERENCES hall_type (id)
);

CREATE TABLE seat_type (
    id SMALLINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    type_name VARCHAR(50) NOT NULL,
    price_modifier NUMERIC NOT NULL
);

CREATE TABLE seat (
    id INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    row_number INT NOT NULL,
    seat_number INT NOT NULL,
    hall_id INT NOT NULL,
    seat_type_id SMALLINT NOT NULL,
    FOREIGN KEY (hall_id) REFERENCES hall (id),
    FOREIGN KEY (seat_type_id) REFERENCES seat_type (id)
);

CREATE TABLE movie (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    name VARCHAR(255) NOT NULL,
    description TEXT NOT NULL,
    duration INT NOT NULL,
    rating REAL,
    release_date DATE
);

CREATE TABLE session_period (
    id SMALLINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    period_name VARCHAR(50) NOT NULL,
    price_modifier NUMERIC NOT NULL
);

CREATE TABLE session (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    start_time TIMESTAMP(0) NOT NULL,
    end_time TIMESTAMP(0) NOT NULL,
    movie_id BIGINT NOT NULL,
    hall_id INT NOT NULL,
    session_period_id SMALLINT NOT NULL,
    FOREIGN KEY (movie_id) REFERENCES movie (id),
    FOREIGN KEY (hall_id) REFERENCES hall (id),
    FOREIGN KEY (session_period_id) REFERENCES session_period (id)
);

CREATE TABLE session_price (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    price NUMERIC NOT NULL,
    session_id BIGINT NOT NULL,
    seat_id INT NOT NULL,
    FOREIGN KEY (session_id) REFERENCES session (id),
    FOREIGN KEY (seat_id) REFERENCES seat (id)
);

CREATE TABLE ticket (
    id BIGINT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    price NUMERIC NOT NULL,
    order_id BIGINT NOT NULL,
    session_id BIGINT NOT NULL,
    seat_id INT NOT NULL,
    FOREIGN KEY (order_id) REFERENCES "order" (id),
    FOREIGN KEY (session_id) REFERENCES session (id),
    FOREIGN KEY (seat_id) REFERENCES seat (id)
);
