---
config:
  theme: redux-color
  layout: dagre
---
erDiagram
	direction TB
	HALL {
		serial id PK ""
		smallint cinema-id FK ""
		smallint number  ""
	}

	CINEMA {
		smallserial id PK ""
		character-varying city  ""
		text address  ""
	}

	MOVIE {
		bigserial id PK ""
		character-varying name  ""
	}

	CUSTOMER {
		bigserial id PK ""
		character-varying name  ""
		character-varying email  ""
		character-varying phone  ""
	}

	ORDERS {
		bigserial id PK ""
		bigint customer_id FK ""
		timestamp created_at  ""
	}

	SESSION {
		bigserial id PK ""
		bigint movie_id FK ""
		int hall_id FK ""
		timestamp start_time  ""
		enum part-of-day-id  "Утро, день, вечер, ночь"
	}

	PLACE {
		serial id PK ""
		int hall_id FK ""
		smallint row  ""
		smallint seat  ""
		enum seat_category  "'в центре', 'с краю', 'в центре, далеко', 'с краю далеко'"
	}

	PRICE {
		bigserial id PK ""
		bigint session-id FK ""
		enum seat_category  ""
		money price  ""
	}

	TICKET {
		bigserial id PK ""
		bigint session_id FK ""
		int hall_id FK ""
		bigint order_id FK ""
		bigint place_id FK ""
		money price  ""
	}

	HALL||--|{PLACE:"  "
	ORDERS}|--||CUSTOMER:"  "
	MOVIE||--|{SESSION:"  "
	SESSION}|--||HALL:"  "
	CINEMA||--|{HALL:"  "
	TICKET}|--||PLACE:"  "
	ORDERS||--|{TICKET:"  "
	SESSION||--|{TICKET:"  "
	PRICE}|--||SESSION:"  "
	TICKET}|--||HALL:"  "